--- a/src/components/Clock/Clock.css
+++ b/src/components/Clock/Clock.css
@@ -1,6 +1,7 @@
 .clock-component {
     width: 200px;
     height: 80px;
+    box-sizing: border-box;
     display: flex;
     justify-content: center; 
     align-items: center; 
