change box sizing to avoid clock jitter issue

--- a/src/components/Clock/Clock.css
+++ b/src/components/Clock/Clock.css
@@ -17,6 +17,7 @@
     line-height: 23px; 
     vertical-align: middle;
     text-align: center;
+    font-variant-numeric: tabular-nums; 
 }
 
 .clock-background-running {
